gardener/manifests/extension/network/network-policy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shoot--dev--kubevirt-1 # we have to create namespace earlier because of network policies, it's a temp fix
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: shoot--dev--kubevirt-1
spec:
  podSelector:
    matchLabels:
      networking.gardener.cloud/all: allowed
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
